<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <!-- Nom -->
    <TextView
        android:id="@+id/text_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nom"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_nom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nom"
        app:layout_constraintTop_toBottomOf="@id/text_nom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Prénom -->
    <TextView
        android:id="@+id/text_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_prenom"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_nom"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_prenom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_prenom"
        app:layout_constraintTop_toBottomOf="@id/text_prenom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Date de naissance -->
    <TextView
        android:id="@+id/text_date_naissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date_naissance"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_prenom"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_date_naissance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/text_date_naissance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Ville de naissance -->
    <TextView
        android:id="@+id/text_ville_naissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ville_naissance"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_date_naissance"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_ville_naissance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ville"
        app:layout_constraintTop_toBottomOf="@id/text_ville_naissance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Département de naissance -->
    <TextView
        android:id="@+id/text_departement_naissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_departement_naissance"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_ville_naissance"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_departments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/departments"
        app:layout_constraintTop_toBottomOf="@id/text_departement_naissance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Dynamic Phone Number List -->
    <LinearLayout
        android:id="@+id/phoneContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/spinner_departments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Add Phone Button -->
    <Button
        android:id="@+id/button_add_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ajouter un phone"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <!-- Bouton de validation -->
    <Button
        android:id="@+id/button_validate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_validate"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/button_add_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

